--- a/wgscovplot/tmpl/wgscovplot_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_gui.html
@@ -43,7 +43,7 @@
                             <div class="row mb-3">
                                 <select id="selectedsamples" class="selected-samples" multiple="multiple">
                                     {% for sample in samples_name %}
-                                        <option value={{sample}}>{{sample}}</option>
+                                    <option value={{sample}}>{{sample}}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -118,9 +118,9 @@
                             <div class="row mb-3">
                                 <div>
                                     <div class="form-check form-switch">
-                                        <label class="form-check-label" for="fix-tooltip-postion">Fix Tooltip
+                                        <label class="form-check-label" for="fix-tooltip-position">Fix Tooltip
                                             Position</label>
-                                        <input class="form-check-input" type="checkbox" id="fix-tooltip-postion"
+                                        <input class="form-check-input" type="checkbox" id="fix-tooltip-position"
                                                unchecked>
                                     </div>
                                 </div>
@@ -168,7 +168,8 @@
                             <div class="row mb-3">
                                 <div>
                                     <div class="form-check form-switch">
-                                        <label class="form-check-label" for="toggle-coverage-stat">Coverage Statistics</label>
+                                        <label class="form-check-label" for="toggle-coverage-stat">Coverage
+                                            Statistics</label>
                                         <input class="form-check-input" type="checkbox" id="toggle-coverage-stat"
                                                unchecked>
                                     </div>
@@ -207,10 +208,12 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md">
-                                    <button class="btn btn-outline-primary" onclick="setDataZoom(0, 0)">Set zoom</button>
+                                    <button class="btn btn-outline-primary" onclick="setDataZoom(0, 0)">Set zoom
+                                    </button>
                                 </div>
                                 <div class="col-md">
-                                    <button class="btn btn-outline-secondary" onclick="setDataZoom(1, {{ref_seq_length}})">Reset zoom
+                                    <button class="btn btn-outline-secondary"
+                                            onclick="setDataZoom(1, {{ref_seq_length}})">Reset zoom
                                     </button>
                                 </div>
                             </div>
@@ -231,12 +234,13 @@
                                 <label class="form-label">Feature Plot Height</label>
                                 <div class="row">
                                     <div class="col-sm-10">
-                                        <input type="range" id="genefeature-height-input" class="form-range" value="15.0" min="1.0"
-                                       max="50.0" step="0.1" onchange="updateGeneFeatureHeight(this.value);">
+                                        <input type="range" id="genefeature-height-input" class="form-range"
+                                               value="15.0" min="1.0"
+                                               max="50.0" step="0.1" onchange="updateGeneFeatureHeight(this.value);">
                                     </div>
                                     <div class="col-sm-2">
                                         <output style="display: block; text-align:center;" type="text"
-                                        id="genefeature-height-output">15.0<span>%</span></output>
+                                                id="genefeature-height-output">15.0<span>%</span></output>
                                     </div>
                                 </div>
                             </div>
@@ -252,9 +256,10 @@
                             <div class="row mb-3">
                                 <label class="col-sm-5">Feature Name</label>
                                 <div class="col-sm-7">
-                                    <select id="selected-gene-feature-name" class="selected-gene-feature-name" multiple="multiple">
+                                    <select id="selected-gene-feature-name" class="selected-gene-feature-name"
+                                            multiple="multiple">
                                         {% for feature_name in gene_feature_name %}
-                                            <option value={{sample}}>{{feature_name}}</option>
+                                        <option value={{sample}}>{{feature_name}}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
@@ -302,11 +307,12 @@
                                     <div class="row">
                                         <div class="col-md-10">
                                             <input type="range" id="chart-height-input" class="form-range" value="19.0"
-                                                   min="1.0" max="70.0" step="0.1" onchange="updateSubPlotHeight(this.value);">
+                                                   min="1.0" max="70.0" step="0.1"
+                                                   onchange="updateSubPlotHeight(this.value);">
                                         </div>
                                         <div class="col-md-2">
                                             <output style="display: block; text-align:center;" type="text"
-                                            id="chart-height-output">19.0<span>%</span></output>
+                                                    id="chart-height-output">19.0<span>%</span></output>
                                         </div>
                                     </div>
                                 </div>
@@ -316,12 +322,13 @@
                                     <label for="chart-left-input" class="form-label">Left Margin</label>
                                     <div class="row">
                                         <div class="col-md-10">
-                                            <input type="range" id="chart-left-input" class="form-range" value="4.0" min="1.0"
-                                           max="50.0" step="0.1" onchange="updateChartLeftMargin(this.value);">
+                                            <input type="range" id="chart-left-input" class="form-range" value="4.0"
+                                                   min="1.0"
+                                                   max="50.0" step="0.1" onchange="updateChartLeftMargin(this.value);">
                                         </div>
                                         <div class="col-md-2">
                                             <output style="display: block; text-align:center;" type="text"
-                                            id="chart-left-output">4.0<span>%</span></output>
+                                                    id="chart-left-output">4.0<span>%</span></output>
                                         </div>
                                     </div>
                                 </div>
@@ -331,12 +338,13 @@
                                     <label for="chart-right-input" class="form-label">Right Margin</label>
                                     <div class="row">
                                         <div class="col-md-10">
-                                            <input type="range" id="chart-right-input" class="form-range" value="4.0" min="1.0"
-                                           max="50.0" step="0.1" onchange="updateChartRightMargin(this.value);">
+                                            <input type="range" id="chart-right-input" class="form-range" value="4.0"
+                                                   min="1.0"
+                                                   max="50.0" step="0.1" onchange="updateChartRightMargin(this.value);">
                                         </div>
                                         <div class="col-md-2">
                                             <output style="display: block; text-align:center;" type="text"
-                                            id="chart-right-output">4.0<span>%</span></output>
+                                                    id="chart-right-output">4.0<span>%</span></output>
                                         </div>
                                     </div>
                                 </div>
@@ -346,18 +354,22 @@
                                     <label class="form-label"> Subplot Top Margin</label>
                                     <div class="row">
                                         <div class="col-md-10">
-                                            <input type="range" id="chart-top-input" class="form-range" value="6.5" min="0.0"
-                                           max="25.0" step="0.1" onchange="updateSubPlotTopMargin(this.value);">
+                                            <input type="range" id="chart-top-input" class="form-range" value="6.5"
+                                                   min="0.0"
+                                                   max="25.0" step="0.1" onchange="updateSubPlotTopMargin(this.value);">
                                         </div>
                                         <div class="col-md-2">
-                                            <output style="display: block; text-align:center;" type="text" id="chart-top-output">6.5<span>%</span></output>
+                                            <output style="display: block; text-align:center;" type="text"
+                                                    id="chart-top-output">6.5<span>%</span></output>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md">
-                                    <button class="btn btn-outline-secondary" onclick="resetGridDisplay()">Reset Grid Display</button>
+                                    <button class="btn btn-outline-secondary" onclick="resetGridDisplay()">Reset Grid
+                                        Display
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -406,19 +418,22 @@
                                     <input class="form-check-input" type="checkbox" id="toggle-mutation" unchecked>
                                 </div>
                                 <div class="form-check form-switch">
-                                    <label class="form-check-label" for="toggle-hideoverlap-mutation">Hide Overlapping Mutations</label>
-                                    <input class="form-check-input" type="checkbox" id="toggle-hideoverlap-mutation" checked>
+                                    <label class="form-check-label" for="toggle-hideoverlap-mutation">Hide Overlapping
+                                        Mutations</label>
+                                    <input class="form-check-input" type="checkbox" id="toggle-hideoverlap-mutation"
+                                           checked>
                                 </div>
                                 <div>
                                     <label for="varmap-height-input" class="form-label">Variant Heatmap Height</label>
                                     <div class="row">
                                         <div class="col-md-10">
-                                            <input type="range" id="varmap-height-input" class="form-range" value="50" min="5"
-                                           max="90" step="1" onchange="updateVarMapHeight(this.value);">
+                                            <input type="range" id="varmap-height-input" class="form-range" value="50"
+                                                   min="5"
+                                                   max="90" step="1" onchange="updateVarMapHeight(this.value);">
                                         </div>
                                         <div class="col-md-2">
                                             <output style="display: block; text-align:center;" type="text"
-                                            id="varmap-height-output">50<span>%</span></output>
+                                                    id="varmap-height-output">50<span>%</span></output>
                                         </div>
                                     </div>
                                 </div>
@@ -435,7 +450,7 @@
         </div>
     </div>
     <div class="tab-pane" id="summary-table" role="tabpanel">
-        <div class="container-fluid" >
+        <div class="container-fluid">
             {{ coverage_stat }}
         </div>
     </div>
