--- a/wgscovplot/tmpl/wgscovplot_flu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_gui.html
@@ -334,7 +334,7 @@
 
     <div class="tab-pane" id="summary-table" role="tabpanel">
         <div class="container-fluid">
-            {{ coverage_stat }}
+            {{ summary_info }}
         </div>
     </div>
 </div>
