--- a/wgscovplot/tmpl/wgscovplot_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_gui.html
@@ -451,7 +451,7 @@
     </div>
     <div class="tab-pane" id="summary-table" role="tabpanel">
         <div class="container-fluid">
-            {{ coverage_stat }}
+            {{ summary_info }}
         </div>
     </div>
 </div>
