--- a/wgscovplot/tmpl/wgscovplot_prod_template.html
+++ b/wgscovplot/tmpl/wgscovplot_prod_template.html
@@ -78,7 +78,7 @@
 
         const refSeqLength = window.refSeq.length;
 
-        const lowCoverageThresholdSet = {{ low_coverage_threshold }}
+        const lowCoverageThreshold = {{ low_coverage_threshold }}
 
         /**
          * The max value is set for y-Axis
