--- a/wgscovplot/tmpl/wgscovplot_flu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_gui.html
@@ -58,13 +58,13 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#yaxis" aria-expanded="false" aria-controls="yaxis">Y-axis
+                                data-bs-target="#yaxis" aria-expanded="false" aria-controls="yaxis">Axis Options
                         </button>
                     </h2>
                     <div id="yaxis" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <div class="mb-3 row">
-                                <label for="scale" class="col-sm-4 col-form-label">Scaling</label>
+                            <div class="row mb-3">
+                                <label for="scale" class="col-sm-4 col-form-label">Y-axis Scale</label>
                                 <div class="col-sm-8">
                                     <select class="form-select" id="scale" onchange="setScale()">
                                         <option value="value">Linear</option>
@@ -72,7 +72,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="mb-3 row">
+                            <div class="row mb-3">
                                 <label for="ymax" class="col-sm-4 col-form-label">Y-axis Limit</label>
                                 <div class="col-sm-8">
                                     <div class="input-group">
@@ -83,21 +83,14 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#xaxis" aria-expanded="false" aria-controls="xaxis">X-axis
-                        </button>
-                    </h2>
-                    <div id="xaxis" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <div class="mb-3 row">
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label" for="toggle-xaxis-label">Show X-axis Label</label>
-                                    <input class="form-check-input" type="checkbox" id="toggle-xaxis-label" unchecked>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-xaxis-label">Show X-axis
+                                            Label</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-xaxis-label"
+                                               unchecked>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -298,7 +291,7 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#renderer-env" aria-expanded="false" aria-controls="renderer-env">
-                            Renderer Environment
+                            Display Environment
                         </button>
                     </h2>
                     <div id="renderer-env" class="accordion-collapse collapse">
