--- a/wgscovplot/tmpl/wgscovplot_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_gui.html
@@ -53,13 +53,13 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#yaxis" aria-expanded="false" aria-controls="yaxis">Y-axis
+                                data-bs-target="#yaxis" aria-expanded="false" aria-controls="yaxis">Axis Options
                         </button>
                     </h2>
                     <div id="yaxis" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <div class="mb-3 row">
-                                <label for="scale" class="col-sm-4 col-form-label">Scaling</label>
+                            <div class="row mb-3">
+                                <label for="scale" class="col-sm-4 col-form-label">Y-axis Scale</label>
                                 <div class="col-sm-8">
                                     <select class="form-select" id="scale" onchange="setScale()">
                                         <option value="value">Linear</option>
@@ -67,7 +67,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="mb-3 row">
+                            <div class="row mb-3">
                                 <label for="ymax" class="col-sm-4 col-form-label">Y-axis Limit</label>
                                 <div class="col-sm-8">
                                     <div class="input-group">
@@ -79,21 +79,12 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#xaxis" aria-expanded="false" aria-controls="xaxis">X-axis
-                        </button>
-                    </h2>
-                    <div id="xaxis" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <div class="mb-3 row">
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label" for="toggle-xaxis-label">Show X-axis Label</label>
-                                    <input class="form-check-input" type="checkbox" id="toggle-xaxis-label" checked>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-xaxis-label">Show X-axis Label</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-xaxis-label" checked>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -378,35 +369,6 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#renderer-env" aria-expanded="false" aria-controls="renderer-env">
-                            Renderer Environment
-                        </button>
-                    </h2>
-                    <div id="renderer-env" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <div class="row mb-3">
-                                <label for="render-env" class="col-sm-4 col-form-label">Renderer</label>
-                                <div class="col-sm-8">
-                                    <select id="render-env" class="form-select" onchange="initWgscovplotRenderEnv()">
-                                        <option value="svg">svg</option>
-                                        <option value="canvas" selected>canvas</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div>
-                                    <div class="form-check form-switch">
-                                        <label class="form-check-label" for="toggle-darkmode">Dark Mode</label>
-                                        <input class="form-check-input" type="checkbox" id="toggle-darkmode" unchecked>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#varmap" aria-expanded="false" aria-controls="varmap">Variant Options
                         </button>
                     </h2>
@@ -435,6 +397,35 @@
                                             <output style="display: block; text-align:center;" type="text"
                                                     id="varmap-height-output">50<span>%</span></output>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#renderer-env" aria-expanded="false" aria-controls="renderer-env">
+                            Display Environment
+                        </button>
+                    </h2>
+                    <div id="renderer-env" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="row mb-3">
+                                <label for="render-env" class="col-sm-4 col-form-label">Renderer</label>
+                                <div class="col-sm-8">
+                                    <select id="render-env" class="form-select" onchange="initWgscovplotRenderEnv()">
+                                        <option value="svg">svg</option>
+                                        <option value="canvas" selected>canvas</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-darkmode">Dark Mode</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-darkmode" unchecked>
                                     </div>
                                 </div>
                             </div>
