implementation for lov coverage threshold line

--- a/wgscovplot/tmpl/wgscovplot_dev_template.html
+++ b/wgscovplot/tmpl/wgscovplot_dev_template.html
@@ -88,7 +88,7 @@
 <body>
 
     {% block content%}
-        {% include "wgscovplot_gui.html" %}
+        {% include "wgscovplot_control_menu.html" %}
     {% endblock %}
     <script type="text/javascript">
         {% include "js/wgscovplot.js" %}
