--- a/wgscovplot/tmpl/wgscovplot.html
+++ b/wgscovplot/tmpl/wgscovplot.html
@@ -1,190 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>wgscovplot</title>
-  <script type="text/javascript">
-    {% if dev == false %}
-    {% include "js/wgscovplot.prod.bundle.js" %}
-    {% else %}
-    {% include "js/wgscovplot.dev.bundle.js" %}
-    {% endif %}
-  </script>
-  <style>
-    #nav-tabContent {
-      padding-top: 56px;
-    }
+    <meta charset="UTF-8">
+    <title>WGSCOVPLOT</title>
+    <script type="text/javascript">
+        {%if dev == false %}
+        {%include "js/wgscovplot.prod.bundle.js" %}
+        {% else %}
+        {%include "js/wgscovplot.dev.bundle.js" %}
+        {%endif %}
+    </script>
+    <style>
+        #nav-tabContent {
+            padding-top: 56px;
+        }
 
-    /*Freeze Table Header*/
-    #summary-coverage-stat thead tr th {
-      position: sticky;
-      top: 56px;
-      background: #cccccc;
-    }
+        /*Freeze Table Header*/
+        #summary-coverage-stat thead tr th {
+            position: sticky;
+            top: 56px;
+            background: #cccccc;
+        }
 
-    /* following CSS rules for btn-toggle are from sidebars.css from https://getbootstrap.com/docs/5.0/examples/sidebars/# */
-    .btn-toggle {
-      display: inline-flex;
-      align-items: center;
-      padding: .25rem .5rem;
-      font-weight: 600;
-      color: rgba(0, 0, 0, .65);
-      background-color: transparent;
-      border: 0;
-    }
+        /* following CSS rules for btn-toggle are from sidebars.css from https://getbootstrap.com/docs/5.0/examples/sidebars/# */
+        .btn-toggle {
+            display: inline-flex;
+            align-items: center;
+            padding: .25rem .5rem;
+            font-weight: 600;
+            color: rgba(0, 0, 0, .65);
+            background-color: transparent;
+            border: 0;
+        }
 
-    .btn-toggle:hover,
-    .btn-toggle:focus {
-      color: rgba(0, 0, 0, .85);
-      background-color: #d2f4ea;
-    }
+        .btn-toggle:hover,
+        .btn-toggle:focus {
+            color: rgba(0, 0, 0, .85);
+            background-color: #d2f4ea;
+        }
 
-    .btn-toggle::before {
-      width: 1.25em;
-      line-height: 0;
-      content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-      transition: transform .35s ease;
-      transform-origin: .5em 50%;
-    }
+        .btn-toggle::before {
+            width: 1.25em;
+            line-height: 0;
+            content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+            transition: transform .35s ease;
+            transform-origin: .5em 50%;
+        }
 
-    .btn-toggle[aria-expanded="true"] {
-      color: rgba(0, 0, 0, .85);
-    }
+        .btn-toggle[aria-expanded="true"] {
+            color: rgba(0, 0, 0, .85);
+        }
 
-    .btn-toggle[aria-expanded="true"]::before {
-      transform: rotate(90deg);
-    }
+        .btn-toggle[aria-expanded="true"]::before {
+            transform: rotate(90deg);
+        }
 
-    .btn-sidebar-hider {
-      display: inline-flex;
-      align-items: center;
-      height: 100%;
-      padding: .1rem .1rem;
-      font-weight: 600;
-      color: rgba(0, 0, 0, .65);
-      background-color: transparent;
-      border: 0;
-    }
+        .btn-sidebar-hider {
+            display: inline-flex;
+            align-items: center;
+            height: 100%;
+            padding: .1rem .1rem;
+            font-weight: 600;
+            color: rgba(0, 0, 0, .65);
+            background-color: transparent;
+            border: 0;
+        }
 
-    .btn-sidebar-hider:hover,
-    .btn-sidebar-hider:focus {
-      color: rgba(0, 0, 0, .85);
-      background-color: #b8b8b8;
-    }
+        .btn-sidebar-hider:hover,
+        .btn-sidebar-hider:focus {
+            color: rgba(0, 0, 0, .85);
+            background-color: #b8b8b8;
+        }
 
-    .btn-sidebar-hider::before {
-      width: 1.0em;
-      line-height: 5;
-      content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-      transition: transform .35s ease;
-      transform-origin: .5em 50%;
-    }
+        .btn-sidebar-hider::before {
+            width: 1.0em;
+            line-height: 5;
+            content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+            transition: transform .35s ease;
+            transform-origin: .5em 50%;
+        }
 
-    .btn-sidebar-hider[aria-expanded="true"] {
-      color: rgba(0, 0, 0, .85);
-    }
+        .btn-sidebar-hider[aria-expanded="true"] {
+            color: rgba(0, 0, 0, .85);
+        }
 
-    .btn-sidebar-hider[aria-expanded="true"]::before {
-      transform: rotateY(180deg);
-    }
+        .btn-sidebar-hider[aria-expanded="true"]::before {
+            transform: rotateY(180deg);
+        }
 
-    .info-icon {
-      cursor: help;
-    }
-  </style>
+        .info-icon {
+            cursor: help;
+        }
+    </style>
 </head>
 <body>
 {% block content %}
 {% include "wgscovplot_control_menu.html" %}
 {% endblock %}
-<script type="text/javascript">
-  {% include "js/wgscovplot.js" %}
-</script>
+
 <script>
-  /**
-   * Reference Sequence
-   * @type {Object}
-   */
-  const db = {{ db | tojson }};
-  window.db = db;
+    const db = {{db | tojson}};
+    console.log(db)
+    window.db = db;
+    document.addEventListener("DOMContentLoaded", function (event) {
+        const $chart = document.getElementById("chart");
+        const $variantHeatmap = document.getElementById("varmap-chart");
+        db.chart = wgscovplot.echarts.init($chart, "white", {renderer: "canvas"});
+        db.variantHeatmap = wgscovplot.echarts.init($variantHeatmap, "white", {renderer: "canvas"});
+        db.positions = [...Array(db.ref_seq.length + 1).keys()];
+        db.positions.shift();
+        db.ref_seq_length = db.positions.length
+        db.selectedSamples = window.db.samples.slice(0, 3);
+        //Axis Option
+        db.scaleType = "log";
+        db.yMax = 10000;
+        //Tooltips option
+        db.showVariantSiteTooltips = true;
+        db.showNonVariantSiteTooltips = false;
+        db.tooltipTriggerOn = "mousemove";
+        db.showCovStatsInTooltips = false;
+        db.crossSampleComparisonInTooltips = true;
+        //Display options
+        db.padTop = 4.0;
+        db.heightOffset = 6.0;
+        db.leftMargin = "4.0%";
+        db.rightMargin = "4.0%";
+        //Genetic Features
+        db.hideOverlappingVariantLabels = false;
+        db.showGeneLabels = true;
 
-  document.addEventListener("DOMContentLoaded", function (event) {
-    const $chart = document.getElementById("chart");
-    const $variantHeatmap = document.getElementById("varmap-chart");
-    db.chart = wgscovplot.echarts.init($chart, "white", {renderer: "canvas"});
-    db.variantHeatmap = wgscovplot.echarts.init($variantHeatmap, "white", {renderer: "canvas"});
-    db.positions = [...Array(ref_seq.length + 1).keys()];
-    db.selectedSamples = window.db.samples.slice(0, 3);
-    db.showVariantSiteTooltips = true;
-    db.showNonVariantSiteTooltips = false;
-    db.hideOverlappingVariantLabels = false;
-    db.showGeneLabels = true;
-    db.padTop = 4.0;
-    db.heightOffset = 6.0;
-    db.leftMargin = "4.0%";
-    db.rightMargin = "4.0%";
-    db.tooltipTriggerOn = "mousemove";
-    db.showCovStatsInTooltips = true;
-    db.crossSampleComparisonInTooltips = true;
-    db.yMax = 1000;
 
-    function updateChartDivSize() {
-      let BOTTOM_PADDING = 20;
-      let bbox = $chart.getBoundingClientRect();
-      let top = bbox.top;
-      let height = window.innerHeight - top - BOTTOM_PADDING;
-      if (height < 300) {
-        height = 300;
-      }
-      $chart.style.height = height + "px";
-      $chart.style.width = (window.innerWidth - bbox.left) + "px";
-      db.chart.resize();
-      $variantHeatmap.style.height = height + "px";
-      $variantHeatmap.style.width = window.innerWidth + "px";
-      db.variantHeatmap.resize();
-    }
-    updateChartDivSize();
-    setTimeout(updateChartDivSize, 1000);
-    window.addEventListener("resize", updateChartDivSize);
+        function updateChartDivSize() {
+            let BOTTOM_PADDING = 20;
+            let bbox = $chart.getBoundingClientRect();
+            let top = bbox.top;
+            let height = window.innerHeight - top - BOTTOM_PADDING;
+            if (height < 300) {
+                height = 300;
+            }
+            $chart.style.height = height + "px";
+            $chart.style.width = (window.innerWidth - bbox.left) + "px";
+            db.chart.resize();
+            $variantHeatmap.style.height = height + "px";
+            $variantHeatmap.style.width = window.innerWidth + "px";
+            db.variantHeatmap.resize();
+        }
 
-    document.getElementById("control-menu-hider").addEventListener("transitionend", function (event) {
-      updateChartDivSize();
+        updateChartDivSize();
+        setTimeout(updateChartDivSize, 1000);
+        window.addEventListener("resize", updateChartDivSize);
+
+        document.getElementById("control-menu-hider").addEventListener("transitionend", function (event) {
+            updateChartDivSize();
+        });
+        document.getElementById("control-menu").addEventListener("transitionend", function (event) {
+            updateChartDivSize();
+        });
+
+        const elements = {
+            $chart,
+            $variantHeatmap,
+            $selectedSamples: $("#selected-samples"),
+            //Axis Option
+            $selectYScale: document.getElementById("yaxis-scale"),
+            $ymax: document.getElementById("ymax"),
+            $btnSetYMax: document.getElementById("set-ymax"),
+            $toggleXAxisLabel: document.getElementById("toggle-xaxis-label"),
+
+            $chartHeightInput: document.getElementById("chart-height-input"),
+            $chartHeightOutput: document.getElementById("chart-height-output"),
+            $chartTopInput: document.getElementById("chart-top-input"),
+            $chartTopOutput: document.getElementById("chart-top-output"),
+            $chartLeftInput: document.getElementById("chart-left-input"),
+            $chartLeftOutput: document.getElementById("chart-left-output"),
+            $chartRightInput: document.getElementById("chart-right-input"),
+            $chartRightOutput: document.getElementById("chart-right-output"),
+            $genefeatureHeightInput: document.getElementById("genefeature-height-input"),
+            $genefeatureHeightOutput: document.getElementById("genefeature-height-output"),
+            $renderEnv: document.getElementById("render-env"),
+
+            $selectedGeneFeatures: $("#selected-gene-feature-name"),
+            $toggleDarkMode: document.getElementById("toggle-darkmode"),
+            $toggleGeneLabel: document.getElementById("toggle-genelabel"),
+            $toggleAmplicons: document.getElementById("toggle-amplicon"),
+            $toggleMutations: document.getElementById("toggle-mutation"),
+            $startPos: document.getElementById("start-pos"),
+            $endPos: document.getElementById("end-pos"),
+
+            //Tooltips option
+            $toggleTooltip: document.getElementById("toggle-tooltip"),
+            $toggleFixedTooltipPosition: document.getElementById("fix-tooltip-position"),
+            $toggleShowTooltipOnClick: document.getElementById("toggle-tooltip-trigger-click"),
+            $toggleShowVariantSiteTooltips: document.getElementById("toggle-tooltip-variant-sites"),
+            $toggleShowNonVariantSiteTooltips: document.getElementById("toggle-tooltip-non-variant-sites"),
+            $toggleTooltipVariantComparison: document.getElementById("toggle-variant-comparison"),
+            $toggleTooltipCovStats: document.getElementById("toggle-coverage-stat"),
+            $toggleShowVariantLabels: document.getElementById("toggle-mutation"),
+
+            //Display option
+            $toggleDataZoomSlider: document.getElementById("toggle-zoom-slider"),
+            $btnShowZoomRegion: document.getElementById("show-zoom-region"),
+            $btnResetView: document.getElementById("reset-view"),
+            $lowThreshold: document.getElementById("low-threshold"),
+            $toggleShowLowCovRegions: document.getElementById("toggle-low-coverage-regions"),
+            $btnSetLowCovThreshold: document.getElementById("set-low-threshold"),
+
+            $toggleHideOverlappingVariantLabels: document.getElementById("toggle-hideoverlap-mutation"),
+            $btnResetMargins: document.getElementById("reset-margin"),
+
+        }
+        window.elements = elements;
+        elements.$selectedSamples.select2();
+        elements.$selectedSamples.val(db.selectedSamples);
+        elements.$selectedSamples.trigger("change");
+        wgscovplot.initWgscovplotRenderEnv({db, elements});
+        wgscovplot.initEventHandlers({db, elements});
     });
-    document.getElementById("control-menu").addEventListener("transitionend", function (event) {
-      updateChartDivSize();
-    });
-
-    const elements = {
-      $chart,
-      $variantHeatmap,
-      $chartHeightInput: document.getElementById("chart-height-input"),
-      $chartHeightOutput: document.getElementById("chart-height-output"),
-      $chartTopInput: document.getElementById("chart-top-input"),
-      $chartTopOutput: document.getElementById("chart-top-output"),
-      $chartLeftInput: document.getElementById("chart-left-input"),
-      $chartLeftOutput: document.getElementById("chart-left-output"),
-      $chartRightInput: document.getElementById("chart-right-input"),
-      $chartRightOutput: document.getElementById("chart-right-output"),
-      $genefeatureHeightInput: document.getElementById("genefeature-height-input"),
-      $genefeatureHeightOutput: document.getElementById("genefeature-height-output"),
-      $renderEnv: document.getElementById("render-env"),
-      $selectedSamples: $("#selected-samples"),
-      $selectedGeneFeatures: $("#selected-gene-feature-name"),
-      $toggleDarkMode: document.getElementById("toggle-darkmode"),
-      $toggleGeneLabel: document.getElementById("toggle-genelabel"),
-      $toggleAmplicons: document.getElementById("toggle-amplicon"),
-      $toggleMutations: document.getElementById("toggle-mutation"),
-      $startPos: document.getElementById("start-pos"),
-      $endPos: document.getElementById("end-pos"),
-      $ymax: document.getElementById("ymax"),
-      $scale: document.getElementById("scale"),
-    }
-    window.elements = elements;
-    elements.$selectedSamples.select2();
-    elements.$selectedSamples.val(window.db.selectedSamples);
-    initWgscovplotRenderEnv({ db, elements });
-    initEventHandlers({ db, elements });
-  });
 </script>
 </body>
 </html>
