updates for variant call options

--- a/wgscovplot/tmpl/wgscovplot.html
+++ b/wgscovplot/tmpl/wgscovplot.html
@@ -126,7 +126,8 @@
         db.leftMargin = "4.0%";
         db.rightMargin = "4.0%";
         //Genetic Features
-        db.hideOverlappingVariantLabels = false;
+        db.hideOverlappingVariantLabels = true;
+        db.showVariantLabels = false;
         db.showGeneLabels = true;
 
 
