--- a/wgscovplot/tmpl/wgscovplot.html
+++ b/wgscovplot/tmpl/wgscovplot.html
@@ -181,6 +181,7 @@
             $renderEnv: document.getElementById("render-env"),
 
             $selectedGeneFeatures: $("#selected-gene-feature-name"),
+            $btnShowSelectedGeneFeatures: document.getElementById("show-selected-gene-feature"),
             $toggleDarkMode: document.getElementById("toggle-darkmode"),
             $toggleGeneLabel: document.getElementById("toggle-genelabel"),
             $toggleAmplicons: document.getElementById("toggle-amplicon"),
