correct code for gene feature

--- a/wgscovplot/tmpl/wgscovplot_control_menu.html
+++ b/wgscovplot/tmpl/wgscovplot_control_menu.html
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                         {% endif %}
-                        {% if db.show_amplicons == True %}
+                        {% if db.show_amplicons == True and db.show_genes == true %}
                         <div class="form-check form-switch">
                             <label class="form-check-label" for="toggle-amplicon">Show Amplicon</label>
                             <span class="info-icon text-info ms-1"
